--- a/css/all.css
+++ b/css/all.css
@@ -11555,4 +11555,12 @@ a {
 .material-icons:hover {
   opacity: .6;
 }
+
+.was-validated .form-check-input:valid ~ .form-check-label, .was-validated .form-check-input.is-valid ~ .form-check-label {
+  color: #000;
+}
+
+.was-validated .form-check-input:valid:checked, .was-validated .form-check-input.is-valid:checked {
+  background-color: #6e776b;
+}
 /*# sourceMappingURL=all.css.map */
