--- a/stylesheets/all.scss
+++ b/stylesheets/all.scss
@@ -55,3 +55,14 @@ a{
     }
   }
 }
+
+//animated
+.animated{
+  opacity: 0;
+  transition:all 1s ease;
+  transform:translateY(20px);
+}
+.fadeIn{
+  opacity: 1;
+  transform:translateY(0);
+}
